# jaxon

./: .gitignore  .nojekyll  LICENSE  README.md  adex.html  alif.html  alif_ref.html  baseline.html  index.html  introduction.html  jax.html  leaky-integrated-and-fire-model.html  lif.html  performance.html  pyproject.toml  robots.txt  search.json  sitemap.xml  spectral.html  style.css  tutorial.html
api/: analyze.baseline.html  analyze.spectral.html  index.html  models.adex.html  models.alif.html  models.alif_ref.html  models.html  models.lif.html  models.punit.html  stimuli.noise.html  stimuli.whitenoise.html
doc/: .gitignore  _quarto.yml  _sidebar.yml  adex.qmd  alif.qmd  alif_ref.qmd  baseline.qmd  index.qmd  introduction.qmd  jax.qmd  leaky-integrated-and-fire-model.qmd  lif.qmd  objects.json  ou.qmd  performance.qmd  punit.qmd  punit_numba.py  spectral.qmd  tutorial.qmd
doc/api/: index.qmd  models.adex.qmd  models.lif.qmd  models.punit.qmd  stimuli.whitenoise.qmd
jaxon/: __init__.py
jaxon/analyze/: __init__.py  baseline.py  spectral.py
jaxon/dsp/: kernels.py  rate.py
jaxon/models/: adex.py  alif.py  lif.py  ou.py  parameters_punits.csv  punit.py
jaxon/stimuli/: noise.py
jaxon/utils/: output.py
site_libs/bootstrap/: bootstrap-1bbfcd83b047924b9b54301a07ee9779.min.css  bootstrap-2481f514e830f8591c681437736611a3.min.css  bootstrap-3521b9d4e62f35153594937a9e469efe.min.css  bootstrap-63b29b7aabc2929d277bd19710646481.min.css  bootstrap-a62a9a5c8952941cfeb247e16076abc9.min.css  bootstrap-ac897a65ac9df4005a120163a05206ce.min.css  bootstrap-b6e1166ad4be7092a08a04256bf7858a.min.css  bootstrap-dark-2d9366711991cc159d788141ad22981f.min.css  bootstrap-dark-4ad9d18a389a3d696be632c6723cd5e4.min.css  bootstrap-dark-4c09b8147de74b8dce72f676b17478f0.min.css  bootstrap-dark-ac74ad03e8123ea4c5ac3ad07e6730ad.min.css  bootstrap-dark-acd270ff881d7cde0c64c7ceaf399e58.min.css  bootstrap-dark-c06854addc88bf897381985ee3dc9d90.min.css  bootstrap-e1dbc1981fe75db57b8d92b3fbbcdf9c.min.css  (+6 more)
